# Cognizant-POC

./: .env.example  .gitignore  API_RESPONSE_BODIES.md  README.md  SYSTEM_ARCHITECTURE.md  angular.json  docker-compose.yml  package-lock.json  package.json
NebulaAI-Frontend/: .dockerignore  Dockerfile  angular.json  cloudbuild.yaml  nginx.conf
NebulaAI-Frontend/src/app/: app.config.ts
NebulaAI-Frontend/src/environments/: environment.prod.ts  environment.ts
analytics-chatbot-angular/src/app/: app.css  app.ts
backend/: .env  Dockerfile  config.py  main.py  pyproject.toml
backend/agents/: __init__.py  adk_agents.py
backend/analytics_chatbot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/auth/: google_auth.py  rbac.py
backend/jobs/: weekly_summary_job.py
backend/middleware/: scope_injector.py
backend/models/: __init__.py  chat.py  mock_data.py  routing.py  session.py  suggestions.py  user_context.py
backend/services/: __init__.py  chat_history_bq.py  chat_turn.py  embeddings.py  title_generator.py  vector_search.py
backend/sql/: chat_history_schema.sql
backend/tests/: test_scope_injector.py  test_suggestions.py
backend/tools/: bigquery_tool.py
frontend/: .env  .env.example  Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
infra/bigquery/: poc_setup.sql
infra/pgvector/: schema.sql  seed_metadata.sql
src/: index.html  main.ts  styles.css
src/app/: app.html  app.routes.ts  app.spec.ts
(+60 files in other folders)
